Fix mistyping - search bar does not jump to a new line on small screens

--- a/cm-frontend/src/components/TopNav.css
+++ b/cm-frontend/src/components/TopNav.css
@@ -1,4 +1,4 @@
 .MuiToolbar-gutters {
-    flex-wrap: 'wrap';
-    justify-content: 'center',
+    flex-wrap: wrap;
+    justify-content: center;
 }
